Give the SettingsPanel a fixed width.
Otherwise, if it grows in size, the canvas gets pushed partially off screen.
We only resize the canvas if the window changes size, not if neighboring
elements do.
Either way, it's also a better design to have a fixed-width settings panel.

--- a/src/styles/SettingsPanel.css
+++ b/src/styles/SettingsPanel.css
@@ -3,6 +3,7 @@
   display: flex; 
   flex-direction: column;
   margin: 20px;
+  width: 170px;
 }
 
 .settings-panel > header.primary {
@@ -44,6 +45,11 @@
   margin-right: 5px;
   /*color: #4a3822;*/
   color: #40301b;
+  flex-shrink: 0;
+}
+
+.settings-panel .data-row .value {
+  word-break: break-all;
 }
 
 .settings-panel .data-row .value,
